# FilmPy

./: README.md  command-line-interface.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
FilmPy/: Editor.py  Sequence.py  __init__.py  constants.py  functions.py
FilmPy/assets/files/: chess.pgn  chess2.pgn
FilmPy/assets/xml/: border-sample.xml
FilmPy/cli/: cli.dtd  main.py
FilmPy/clips/: ChessClip.py  Clip.py  ClipBase.py  ColorClip.py  CompositeClip.py  GridClip.py  ImageClip.py  TextClip.py  __init__.py
FilmPy/clips/YouTube/: ChessShortsClip.py  __init__.py
FilmPy/transitions/: CrossDissolve.py  TransitionBase.py
docs/: CHANGELOG.md  README.md
sphinx/: FilmPy.clips.rst  FilmPy.rst  FilmPy.transitions.rst  conf.py  index.rst  modules.rst
sphinx_docs/source/: conf.py  glossary.rst  index.rst  supporting-FilmPy.rst  user-guide.rst
sphinxdocs/source/: conf.py  index.rst
sphinxdocs/source/FilmPy/: Editor.rst
sphinxdocs/source/FilmPy/clips/: ChessClip.rst  Clip.rst  ClipBase.rst  ColorClip.rst  CompositeClip.rst  GridClip.rst
